# QtGraphsExamples

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  main.cpp
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
app/common/: ExampleTab.cpp  ExampleTab.h  GraphTab.cpp  GraphTab.h
app/pages/: Page2D.cpp  Page2D.h  Page3D.cpp  Page3D.h
app/tabs/2d/: BarChartTab.cpp  BarChartTab.h  LineChartTab.cpp  LineChartTab.h  ScatterChartTab.cpp  ScatterChartTab.h
app/tabs/3d/: Bars3DTab.cpp  Bars3DTab.h  Scatter3DTab.cpp  Scatter3DTab.h  Surface3DTab.cpp  Surface3DTab.h
cmake/: QtGraphsHelpers.cmake
qml/: BarChartExample.qml  Bars3DExample.qml  ChartPage.qml  LineChartExample.qml  Main.qml  ScatterChartExample.qml  Surface3DExample.qml
qml/2d/areachart/basic/: AreaChartBasicDataProvider.cpp  AreaChartBasicDataProvider.h  AreaChartBasicDescription.qml  AreaChartBasicExample.qml
qml/2d/areachart/live/: LiveAreaChartDescription.qml  LiveAreaChartExample.qml
qml/2d/areachart/pointlabels/: AreaChartPointLabelsDataProvider.cpp  AreaChartPointLabelsDataProvider.h  AreaChartPointLabelsDescription.qml  AreaChartPointLabelsExample.qml
qml/2d/areachart/stacked/: AreaChartStackedDataProvider.cpp  AreaChartStackedDataProvider.h  AreaChartStackedDescription.qml  AreaChartStackedExample.qml
qml/2d/areachart/stackedlabels/: AreaChartStackedInlineLabelsDescription.qml  AreaChartStackedInlineLabelsExample.qml  AreaChartStackedSideLegendDescription.qml  AreaChartStackedSideLegendExample.qml
qml/2d/barchart/basic/: BarChartBasicDataProvider.cpp  BarChartBasicDataProvider.h  BarChartBasicDescription.qml  BarChartBasicExample.qml
qml/2d/barchart/horizontal/: BarChartHorizontalDataProvider.cpp  BarChartHorizontalDataProvider.h  BarChartHorizontalDescription.qml  BarChartHorizontalExample.qml
qml/2d/barchart/labels/: BarChartLabelsDataProvider.cpp  BarChartLabelsDataProvider.h  BarChartLabelsDescription.qml  BarChartLabelsExample.qml
qml/2d/barchart/legend/: BarChartInlineLegendDescription.qml  BarChartInlineLegendExample.qml  BarChartLegendDataProvider.cpp  BarChartLegendDataProvider.h  BarChartSideLegendDescription.qml  BarChartSideLegendExample.qml
qml/2d/barchart/mixedline/: BarChartMixedLineDataProvider.cpp  BarChartMixedLineDataProvider.h  BarChartMixedLineDescription.qml  BarChartMixedLineExample.qml
qml/2d/barchart/stacked/: BarChartStackedDataProvider.cpp  BarChartStackedDataProvider.h  BarChartStackedDescription.qml  BarChartStackedExample.qml
qml/2d/barchart/stackedpercent/: BarChartStackedPercentDataProvider.cpp  BarChartStackedPercentDataProvider.h  BarChartStackedPercentDescription.qml  BarChartStackedPercentExample.qml
qml/2d/barchart/targetline/: BarChartTargetLineDataProvider.cpp  BarChartTargetLineDataProvider.h  BarChartTargetLineDescription.qml  BarChartTargetLineExample.qml
qml/2d/flowchart/basic/: FlowChartDescription.qml  FlowChartExample.qml
qml/2d/flowchart/hover/: FlowChartHoverDescription.qml  FlowChartHoverExample.qml
qml/2d/flowchart/multilayer/: FlowChartMultiLayerDescription.qml  FlowChartMultiLayerExample.qml
qml/2d/flowchart/partial/: FlowChartPartialDescription.qml  FlowChartPartialExample.qml
qml/2d/flowchart/topdown/: FlowChartTopDownDescription.qml  FlowChartTopDownExample.qml
qml/2d/heatmap/basic/: HeatmapDescription.qml  HeatmapExample.qml
qml/2d/linechart/basic/: LineChartBasicDataProvider.cpp  LineChartBasicDataProvider.h  LineChartBasicDescription.qml  LineChartBasicExample.qml
qml/2d/linechart/editor/: LineChartEditorDataProvider.cpp  LineChartEditorDataProvider.h  LineChartEditorDescription.qml  LineChartEditorExample.qml  LineChartEditorInspector.qml
qml/2d/linechart/legend/: LineChartInlineLegendDescription.qml  LineChartInlineLegendExample.qml  LineChartLegendDataProvider.cpp  LineChartLegendDataProvider.h  LineChartSideLegendDescription.qml  LineChartSideLegendExample.qml
qml/2d/linechart/live/: LiveLineChartDescription.qml  LiveLineChartExample.qml
qml/2d/linechart/range/: LineChartRangeDataProvider.cpp  LineChartRangeDataProvider.h  LineChartRangeDescription.qml  LineChartRangeExample.qml
qml/2d/linechart/stacked/: LineChartStackedDataProvider.cpp  LineChartStackedDataProvider.h  LineChartStackedDescription.qml  LineChartStackedExample.qml  LineChartStackedHoverDescription.qml  LineChartStackedHoverExample.qml
qml/2d/linechart/table/: LineChartTableDataProvider.cpp  LineChartTableDataProvider.h  LineChartTableDescription.qml  LineChartTableExample.qml  LineChartTableGraph.qml  LineChartTableTable.qml
qml/2d/piechart/basic/: PieChartBasicDataProvider.cpp  PieChartBasicDataProvider.h  PieChartBasicDescription.qml  PieChartBasicExample.qml
qml/2d/piechart/donut/: PieChartDonutDescription.qml  PieChartDonutExample.qml
qml/2d/populationpyramid/basic/: PopulationPyramidDataProvider.cpp  PopulationPyramidDataProvider.h  PopulationPyramidDescription.qml  PopulationPyramidExample.qml
qml/2d/radarchart/: RadarChart.qml
qml/2d/radarchart/basic/: RadarChartBasicDescription.qml  RadarChartBasicExample.qml
qml/2d/radarchart/legend/: RadarChartInlineLegendDescription.qml  RadarChartInlineLegendExample.qml  RadarChartSideLegendDescription.qml  RadarChartSideLegendExample.qml
qml/2d/radarchart/multiline/: RadarChartMultiLineDescription.qml  RadarChartMultiLineExample.qml
qml/2d/scatterchart/averages/: ScatterChartAveragesDataProvider.cpp  ScatterChartAveragesDataProvider.h  ScatterChartAveragesDescription.qml  ScatterChartAveragesExample.qml
qml/2d/scatterchart/basic/: ScatterChartBasicExample.qml  (+3 more)
qml/barchart/: BarChartDataProvider.cpp  BarChartDataProvider.h  BarChartExample.qml
qml/bars3d/: Bars3DDataProvider.cpp  Bars3DDataProvider.h  Bars3DExample.qml
qml/linechart/: LineChartDataProvider.cpp  LineChartDataProvider.h  LineChartExample.qml
qml/scatterchart/: ScatterChartDataProvider.cpp  ScatterChartDataProvider.h  ScatterChartExample.qml
qml/surface3d/: Surface3DDataProvider.cpp  Surface3DDataProvider.h  Surface3DExample.qml
shared/: CMakeLists.txt  DemoWindow.h
(+92 files in other folders)
